<resources>
    <!--TODO:__Original-->
    <string name="app_name" translatable="false">Hi-2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id" translatable="false">
        ca-app-pub-6453117593348998/1387595660</string>

    <string name="facebook_app_id" translatable="false">
        508947969277201</string>
    <string name="server_client_id" translatable="false">
        39764648669-e48v01id62s1b3tq0gn8h039qvlr49pj.apps.googleusercontent.com</string>
    <string name="server_client_id2" translatable="false">
        39764648669-7ja8hc0agg74mfi3jjl3pt17pgjb3me7.apps.googleusercontent.com</string>

    <!--TODO:__nav_Main-->
    <string name="nav_Home">Home</string>
    <string name="nav_Diary">Diary</string>
    <string name="nav_Calories">Calories</string>
    <string name="nav_Sleep">Sleep</string>
    <string name="nav_Heart">Heart Rate</string>

    <!--TODO:__nav_Account-->
    <string name="nav_title_Ac">Account</string>
    <string name="nav_BasicInfo">BasicInfo</string>
    <string name="nav_MyDevice">MyDevice</string>

    <!--TODO:__nav_Other-->
    <string name="nav_title_Other">Other</string>
    <string name="nav_ProductTour">Product Tour</string>
    <string name="nav_AR_Exp">A.R.Exp.</string>
    <string name="nav_Settings">Settings</string>

    <!--TODO:__nav_Test Dev.-->
    <string name="nav_title_TestDev">Test Dev.</string>
    <string name="nav_Test01">T.D.01</string>
    <string name="nav_Test02">T.D.02</string>

    <!--TODO:__SignIo-->
    <string name="signio_google_bt_in">Sign In With Google</string>
    <string name="signio_facebook_bt_in">Sign In With Facebook</string>
    <string name="signio_google_bt_out">Sign Out With Google</string>
    <string name="signio_facebook_bt_out">Sign Out With Facebook</string>

    <!--<string name="app_name">Sign-In Quickstart</string>-->
    <string name="title_text" translatable="false">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt" translatable="false">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err" translatable="false">"Error: please check logs."</string>
    <string name="error_null_person" translatable="false">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt" translatable="false">Auth Code: %s</string>
    <string name="id_token_fmt" translatable="false">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt" translatable="false">
        Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect" translatable="false">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon" translatable="false">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale" translatable="false">
        Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity" translatable="false">SignInActivity</string>
    <string name="desc_sign_in_activity" translatable="false">
        Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes" translatable="false">
        Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity" translatable="false">
        IdTokenActivity</string>
    <string name="desc_id_token_activity" translatable="false">
        Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity" translatable="false">
        Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity" translatable="false">
        ServerAuthCodeActivity</string>
    <string name="ac_user_name" translatable="false">Hi Asa</string>
    <string name="ac_user_mail" translatable="false">poiu60052</string>
    <string name="Diary_Sex">Sex</string>
    <string name="Diary_Sex_Male">Male</string>
    <string name="Diary_Sex_Female">Female</string>
    <string name="Diary_Dot" translatable="false">.</string>
    <string name="Diary_Height">Height</string>
    <string name="Diary_Weight">Weight</string>
    <string name="Diary_BMI" translatable="false">BMI</string>
    <string name="FABM_Height"> Height </string>
    <string name="FABM_Weight"> Weight </string>
    <string name="FABM_Food"> Food </string>
    <string name="CBar_Step">Step</string>
    <string name="CBar_Calories">Cal</string>
    <string name="Dialog_Title_Height">Please select your height</string>
    <string name="Dialog_Title_Weight">Please select your weight</string>
    <string name="Dialog_button_OK">OK</string>
    <string name="Dialog_button_OK2">Next</string>
    <string name="Dialog_button_Cancel">Cancel</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="nav_Map">Map</string>
    <string name="nav_Chat">Chat</string>
    <string name="nav_Note">Note</string>
    <string name="nav_Camera">Camera</string>
    <string name="nav_Notification">Notification</string>
    <string name="nav_AlarmNotification" translatable="false">AlarmNotification</string>
    <string name="nav_Record">Record</string>

    <string name="default_text" translatable="false">--</string>

    <string name="EnterButton">Enter</string>
    <string name="send">Send</string>
    <string name="textHit">Enter</string>

    <string name="PD_title">Please wait</string>
    <string name="PD_text">Loading data…</string>

    <string name="HiCard_firstUse">Welcome to use HiApp</string>
    <string name="HiCard_firstOpen">Welcome back to HiApp</string>

    <string name="Heart_bt_start">Start</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title" translatable="false">標題</string>
    <string name="enter_title" translatable="false">輸入標題</string>
    <string name="content">content</string>
    <string name="enter_content" translatable="false">輸入內容</string>
    <string name="about" translatable="false">這是Android Tutorial應用程式</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="version" translatable="false">版本：AndroidTutorial_0.2.4</string>
    <string name="title_activity_item" translatable="false">ItemActivity</string>
    <string name="title_activity_color" translatable="false">ColorActivity</string>
    <string name="delete" translatable="false">刪除</string>
    <string name="delete_item" translatable="false">確定要刪除 %1$d 個項目？</string>
    <string name="default_color" translatable="false">預設的顏色</string>
    <string name="default_color_summary" translatable="false">新增記事的預設顏色</string>

    <string name="default_notify" translatable="false">預設提醒時間</string>
    <string name="default_notify_summary" translatable="false">在指定的時間之前通知</string>

    <string-array name="notify_minutes_array">
        <item>五分鐘</item>
        <item>十分鐘</item>
        <item>二十分鐘</item>
        <item>三十分鐘</item>
        <item>六十分鐘</item>
    </string-array>

    <string-array name="notify_minutes_value_array">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="title_record" translatable="false">語音備忘</string>
    <string name="title_play" translatable="false">播放語音備忘</string>
    <string name="record_play" translatable="false">播放</string>
    <string name="record_new" translatable="false">重新錄製</string>
    <string name="record_audio_denied" translatable="false">沒有錄音設備授權</string>
    <string name="write_external_storage_denied" translatable="false">沒有寫入外部儲存設備授權</string>


    <string name="title_update_location" translatable="false">記事儲存的位置</string>
    <string name="message_update_location" translatable="false">更新或清除儲存的位置資訊?</string>
    <string name="update" translatable="false">更新</string>
    <string name="clear" translatable="false">清除</string>

    <string name="title_current_location" translatable="false">目前位置</string>
    <string name="message_current_location" translatable="false">是否儲存目前位置?</string>

    <string name="google_play_service_missing" translatable="false">裝置沒有安裝Google Play服務</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="Blue">Blue</string>
    <string name="Purple">Purple</string>
    <string name="Green">Green</string>
    <string name="Orange">Orange</string>
    <string name="Red">Red</string>

    <string name="modify">Modify</string>

    <string name="signIn_button_Cancel">Cancel</string>
    <string name="signIn_button_OK">OK</string>
    <string name="signIn1_title">Bind Account</string>
    <string name="signIn1_content">
        Please bind your account in the next step!\nOtherwise, the data can not be saved!</string>
    <string name="signIn1_button_OK">Next</string>
    <string name="signIn2_title">Chose Account</string>
    <string name="signIn2_content">Please select the account you want to bind！</string>
    <string name="signIn2_button_OK">Previous</string>

    <string name="bi_gender_title">Please select your gender</string>
    <string name="bi_birthday_title">Please select your birthday</string>
    <string name="bi_wake_time_title">Please select your wake time</string>
    <string name="Food_Send">Send</string>
    <string name="Food_Cancel">Cancel</string>
    <string name="cfab_Sport">Sport</string>
    <string name="cfab_Target">Target</string>
    <string name="cfab_Recommend">Recommend</string>

</resources>
