<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/auto_divider"
    android:showDividers="middle">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/target_RL1">

        <TextView
            android:text="請選擇一個目標"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/Target_text1"
            android:layout_margin="10dp" />

        <RadioGroup
            android:id="@+id/Target_Group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_below="@+id/Target_text1"
            android:layout_alignParentStart="true">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Diary_Weight"
                android:id="@+id/Target_Weight_RB"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="2dp"
                android:checked="true"
                android:textSize="18sp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Diary_Height"
                android:id="@+id/Target_Height_RB"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="2dp"
                android:textSize="18sp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Diary_BMI"
                android:id="@+id/Target_BMI_RB"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="2dp"
                android:textSize="18sp" />
        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/target_RL2">
        <TextView
            android:text="請選擇一個目標值"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/Target_text2"
            android:layout_margin="10dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:id="@+id/Target_NP_LL"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Target_text2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" "
                android:layout_weight="1" />

            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:id="@+id/Target_NP_Int"
                android:orientation="vertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Diary_Dot"
                android:gravity="center_vertical|center_horizontal" />

            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:id="@+id/Target_NP_Dec"
                android:orientation="vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" "
                android:layout_weight="1" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>