<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FABM_Weight_RL"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <android.support.design.widget.FloatingActionButton
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FABM_Weight"
            android:layout_gravity="center_vertical|right"
            android:layout_alignParentTop="true"
            android:foregroundGravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="23dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/s_fabmenu_fab_diary"
            android:src="@drawable/ic_fab_paint_wt"
            android:elevation="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/FABM_Weight"
            android:id="@+id/FABM_Weight_Text"
            android:layout_alignBottom="@+id/FABM_Weight"
            android:layout_toStartOf="@+id/FABM_Weight"
            android:layout_alignParentTop="true"
            android:textColor="#000000"
            android:foregroundGravity="center"
            android:gravity="center"
            android:background="@drawable/s_fabmenu_text"
            android:layout_gravity="center_vertical"
            android:singleLine="false"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:elevation="5dp" />

    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FABM_Height_RL"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <!--
        android:layout_width="42dp"
        android:layout_height="42dp"
        -->

        <android.support.design.widget.FloatingActionButton
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FABM_Height"
            android:layout_gravity="center_vertical|right"
            android:layout_alignParentTop="true"
            android:foregroundGravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="23dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/s_fabmenu_fab_diary"
            android:src="@drawable/ic_fab_paint_wt"
            android:elevation="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/FABM_Height"
            android:id="@+id/FABM_Height_Text"
            android:layout_alignBottom="@+id/FABM_Height"
            android:layout_toStartOf="@+id/FABM_Height"
            android:layout_alignParentTop="true"
            android:textColor="#000000"
            android:foregroundGravity="center"
            android:gravity="center"
            android:background="@drawable/s_fabmenu_text"
            android:layout_gravity="center_vertical"
            android:singleLine="false"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:elevation="5dp" />

    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FABM_Food_RL"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <android.support.design.widget.FloatingActionButton
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FABM_Food"
            android:layout_gravity="center_vertical|right"
            android:layout_alignParentTop="true"
            android:foregroundGravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="23dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/s_fabmenu_fab_diary"
            android:src="@drawable/ic_fab_food_wt"
            android:elevation="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/FABM_Food"
            android:id="@+id/FABM_Food_Text"
            android:layout_alignBottom="@+id/FABM_Food"
            android:layout_toStartOf="@+id/FABM_Food"
            android:layout_alignParentTop="true"
            android:textColor="#000000"
            android:foregroundGravity="center"
            android:gravity="center"
            android:background="@drawable/s_fabmenu_text"
            android:layout_gravity="center_vertical"
            android:singleLine="false"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:elevation="5dp" />

    </RelativeLayout>

</RelativeLayout>